# jobboard-scraper

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: logs.py  requirements.txt
src/integrations/: common.py  gen_common.py  indeed.py  infojobs.py  linkedin.py
src/models/jobopportunity/: indeed.py  infojobs.py  linkedin.py  models.py
src/runner/: load_runner.py  main.py  scraper_runner.py
src/scrapers/: indeed.py  infojobs.py  linkedin.py  scraper.py
test/: test_streamlit.py
