[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
pymongo = "^4.6.1"
cloudscraper = "^1.2.71"
psycopg2 = "^2.9.9"
opentelemetry-propagator-b3 = "^1.21.0"
python-json-logger = "^2.0.7"
colorama = "^0.4.6"
logging = "^0.4.9.6"
pytest = "^7.4.3"
streamlit = "^1.29.0"
pandas = "^2.1.4"
playwright = "^1.40.0"
datetime = "^5.3"
httpx = "^0.25.2"
webdriver-manager = "^4.0.1"
lxml = "^4.9.3"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
